--- a/bundle/manifests/appstudio.redhat.com_applications.yaml
+++ b/bundle/manifests/appstudio.redhat.com_applications.yaml
@@ -95,6 +95,8 @@ spec:
                 required:
                 - url
                 type: object
+            required:
+            - displayName
             type: object
           status:
             description: ApplicationStatus defines the observed state of Application
