--- a/config/crd/bases/appstudio.redhat.com_applications.yaml
+++ b/config/crd/bases/appstudio.redhat.com_applications.yaml
@@ -86,6 +86,8 @@ spec:
                 required:
                 - url
                 type: object
+            required:
+            - displayName
             type: object
           status:
             description: ApplicationStatus defines the observed state of Application
