--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -17,8 +17,8 @@ patchesStrategicMerge:
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
-- patches/cainjection_in_applications.yaml # Comment for KCP
-- patches/cainjection_in_components.yaml # Comment for KCP
+#- patches/cainjection_in_applications.yaml # Comment for KCP
+#- patches/cainjection_in_components.yaml # Comment for KCP
 # - patches/cainjection_in_componentdetectionqueries.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
