--- a/.tekton/pull-request.yaml
+++ b/.tekton/pull-request.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
-  generateName: on-pr-
+  name: has-on-pull-request
   namespace: application-service
   annotations:
     pipelinesascode.tekton.dev/on-event: "[pull_request]"
