Add strategies to the component CRD

--- a/config/crd/bases/appstudio.redhat.com_componentdetectionqueries.yaml
+++ b/config/crd/bases/appstudio.redhat.com_componentdetectionqueries.yaml
@@ -217,6 +217,12 @@ spec:
                             - name
                             type: object
                           type: array
+                        releaseStrategies:
+                          description: Release strategies to apply when releasing
+                            this component
+                          items:
+                            type: string
+                          type: array
                         replicas:
                           description: The number of replicas to deploy the component
                             with
