--- a/config/crd/bases/appstudio.redhat.com_components.yaml
+++ b/config/crd/bases/appstudio.redhat.com_components.yaml
@@ -166,6 +166,11 @@ spec:
                   - name
                   type: object
                 type: array
+              releaseStrategies:
+                description: Release strategies to apply when releasing this component
+                items:
+                  type: string
+                type: array
               replicas:
                 description: The number of replicas to deploy the component with
                 type: integer
