--- a/config/rbac/role_build.yaml
+++ b/config/rbac/role_build.yaml
@@ -6,16 +6,6 @@ metadata:
   name: manager-role-build
 rules:
 - verbs:
-    - update
-    - get
-    - list
-    - watch
-  apiGroups:
-    - ""
-  resources:
-    - "secrets"
-    - "serviceaccounts"
-- verbs:
     - create
     - delete
     - deletecollection
@@ -46,9 +36,12 @@ rules:
     - list
     - create
     - watch
+    - update
   resources:
     - persistentvolumeclaims
     - persistentvolumeclaims/status
+    - secrets
+    - serviceaccounts
   apiGroups:
     - ""
 - verbs:
