Support building of private Git Repositories (#68)
Look up the secret referenced by Component CR,
Annotate the Secret such that Tekton recognizes it.
Patch the pipeline service account with the name of the Secret

--- a/config/rbac/role_build.yaml
+++ b/config/rbac/role_build.yaml
@@ -36,9 +36,12 @@ rules:
     - list
     - create
     - watch
+    - update
   resources:
     - persistentvolumeclaims
     - persistentvolumeclaims/status
+    - secrets
+    - serviceaccounts
   apiGroups:
     - ""
 - verbs:
