--- a/config/crd/bases/appstudio.redhat.com_components.yaml
+++ b/config/crd/bases/appstudio.redhat.com_components.yaml
@@ -249,6 +249,9 @@ spec:
           status:
             description: ComponentStatus defines the observed state of Component
             properties:
+              buildBundle:
+                description: Tekton bundle for the Component CR
+                type: string
               conditions:
                 description: Condition about the Component CR
                 items:
