--- a/bundle/manifests/appstudio.redhat.com_components.yaml
+++ b/bundle/manifests/appstudio.redhat.com_components.yaml
@@ -2,7 +2,6 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    cert-manager.io/inject-ca-from: application-service-system/application-service-serving-cert
     controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: components.appstudio.redhat.com
@@ -83,12 +82,14 @@ spec:
                       type: string
                     value:
                       description: 'Variable references $(VAR_NAME) are expanded using
-                        the previous defined environment variables in the container
+                        the previously defined environment variables in the container
                         and any service environment variables. If a variable cannot
                         be resolved, the reference in the input string will be unchanged.
-                        The $(VAR_NAME) syntax can be escaped with a double $$, ie:
-                        $$(VAR_NAME). Escaped references will never be expanded, regardless
-                        of whether the variable exists or not. Defaults to "".'
+                        Double $$ are reduced to a single $, which allows for escaping
+                        the $(VAR_NAME) syntax: i.e. "$$(VAR_NAME)" will produce the
+                        string literal "$(VAR_NAME)". Escaped references will never
+                        be expanded, regardless of whether the variable exists or
+                        not. Defaults to "".'
                       type: string
                     valueFrom:
                       description: Source for the environment variable's value. Cannot
@@ -174,6 +175,12 @@ spec:
                   required:
                   - name
                   type: object
+                type: array
+              releaseStrategies:
+                description: List of references to ReleaseStrategies to use when releasing
+                  the component
+                items:
+                  type: string
                 type: array
               replicas:
                 description: The number of replicas to deploy the component with
