Make Devfile Registry configurable for CDQ
Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/bundle/manifests/application-service.clusterserviceversion.yaml
+++ b/bundle/manifests/application-service.clusterserviceversion.yaml
@@ -277,6 +277,12 @@ spec:
                       key: token
                       name: has-github-token
                       optional: true
+                - name: DEVFILE_REGISTRY_URL
+                  valueFrom:
+                    configMapKeyRef:
+                      key: DEVFILE_REGISTRY_URL
+                      name: application-service-devfile-registry-config
+                      optional: true
                 image: quay.io/redhat-appstudio/application-service:next
                 imagePullPolicy: Always
                 livenessProbe:
