Address PR feedback 1 for CDQ updates
Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/config/samples/application/app-existing-repos.yaml
+++ b/config/samples/application/app-existing-repos.yaml
@@ -6,7 +6,7 @@ spec:
   # Add fields here
   displayName: "petclinic"
   description: "application definition for petclinic-app"
-  gitOpsRepository: 
-    url: "https://github.com/johnmcollier/petclinic-gitops"
-  appModelRepository: 
-    url: "https://github.com/johnmcollier/petclinic-app"
+  # gitOpsRepository: 
+  #   url: "https://github.com/johnmcollier/petclinic-gitops"
+  # appModelRepository: 
+  #   url: "https://github.com/johnmcollier/petclinic-app"
