--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -9,11 +9,8 @@ configMapGenerator:
   - controller_manager_config.yaml
   name: manager-config
 - envs:
-  - github.properties
-  name: github-config
-- envs:
-  - devfile_registry.properties
-  name: devfile-registry-config
+  - has.properties
+  name: has-config
   
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
