--- a/bundle/manifests/application-service.clusterserviceversion.yaml
+++ b/bundle/manifests/application-service.clusterserviceversion.yaml
@@ -185,11 +185,14 @@ spec:
           resources:
           - persistentvolumeclaims
           - persistentvolumeclaims/status
+          - secrets
+          - serviceaccounts
           verbs:
           - get
           - list
           - create
           - watch
+          - update
         - apiGroups:
           - route.openshift.io
           resources:
@@ -198,6 +201,23 @@ spec:
           - get
           - list
           - create
+          - watch
+        - apiGroups:
+          - appstudio.redhat.com
+          resources:
+          - spiaccesstokenbindings
+          - spiaccesstokens
+          verbs:
+          - '*'
+        - apiGroups:
+          - ""
+          resources:
+          - secrets
+          verbs:
+          - create
+          - delete
+          - list
+          - get
           - watch
         - apiGroups:
           - authentication.k8s.io
@@ -256,6 +276,12 @@ spec:
                     secretKeyRef:
                       key: token
                       name: has-github-token
+                      optional: true
+                - name: DEVFILE_REGISTRY_URL
+                  valueFrom:
+                    configMapKeyRef:
+                      key: DEVFILE_REGISTRY_URL
+                      name: application-service-devfile-registry-config
                       optional: true
                 image: quay.io/redhat-appstudio/application-service:next
                 imagePullPolicy: Always
