--- a/.tekton/push.yaml
+++ b/.tekton/push.yaml
@@ -16,19 +16,7 @@ spec:
     - name: pusher-name
   pipelineRef:
     name: docker-build
-    bundle: quay.io/redhat-appstudio/build-templates-bundle:93dac682ee16a08634d593b836758e1d4fa8d967
-  pipelineSpec:
-    params:
-      - name: git-url
-        value: 'https://github.com/redhat-appstudio/application-service'
-      - name: revision
-        value: $(git-revision)
-      - name: output-image
-        value: 'quay.io/redhat-appstudio/application-service:$(git-revision)'
-      - name: path-context
-        value: .
-      - name: dockerfile
-        value: Dockerfile
+    bundle: 'quay.io/redhat-appstudio/build-templates-bundle:93dac682ee16a08634d593b836758e1d4fa8d967'
   workspaces:
     - name: workspace
       persistentVolumeClaim:
