--- a/bundle/manifests/appstudio.redhat.com_components.yaml
+++ b/bundle/manifests/appstudio.redhat.com_components.yaml
@@ -218,6 +218,10 @@ spec:
                         description: If specified, the devfile at the URL will be
                           used for the component.
                         type: string
+                      dockerfileUrl:
+                        description: If specified, the dockerfile at the URL will
+                          be used for the component.
+                        type: string
                       secret:
                         description: Secret containing a Person Access Token to clone
                           a sample, if using private repository
