--- a/config/crd/bases/appstudio.redhat.com_componentdetectionqueries.yaml
+++ b/config/crd/bases/appstudio.redhat.com_componentdetectionqueries.yaml
@@ -48,6 +48,14 @@ spec:
                     description: If specified, the devfile at the URL will be used
                       for the component.
                     type: string
+                  dockerfileUrl:
+                    description: If specified, the dockerfile at the URL will be used
+                      for the component.
+                    type: string
+                  secret:
+                    description: Secret containing a Person Access Token to clone
+                      a sample, if using private repository
+                    type: string
                   url:
                     description: If importing from git, the repository to create the
                       component from
@@ -269,6 +277,14 @@ spec:
                                 devfileUrl:
                                   description: If specified, the devfile at the URL
                                     will be used for the component.
+                                  type: string
+                                dockerfileUrl:
+                                  description: If specified, the dockerfile at the
+                                    URL will be used for the component.
+                                  type: string
+                                secret:
+                                  description: Secret containing a Person Access Token
+                                    to clone a sample, if using private repository
                                   type: string
                                 url:
                                   description: If importing from git, the repository
