update has to use PVC instead of pvctemplate

--- a/.tekton/pull-request.yaml
+++ b/.tekton/pull-request.yaml
@@ -20,10 +20,6 @@ spec:
   serviceAccountName: pipeline
   workspaces:
     - name: workspace
-      volumeClaimTemplate:
-        spec:
-          accessModes:
-            - ReadWriteOnce
-          resources:
-            requests:
-              storage: 200Mi
+      persistentVolumeClaim:
+        claimName: app-studio-default-workspace
+      subPath: application-service-check-{{ revision }}
