--- a/config/crd/bases/appstudio.redhat.com_components.yaml
+++ b/config/crd/bases/appstudio.redhat.com_components.yaml
@@ -200,6 +200,13 @@ spec:
               route:
                 description: The route to expose the component with
                 type: string
+              secret:
+                description: 'Secret describes the name of a Kubernetes secret containing
+                  either: 1. A Personal Access Token to access the Component''s git
+                  repostiory (if using a Git-source component) or 2. An Image Pull
+                  Secret to access the Component''s container image (if using an Image-source
+                  component).'
+                type: string
               source:
                 description: Source describes the Component source
                 properties:
@@ -209,10 +216,6 @@ spec:
                       devfileUrl:
                         description: If specified, the devfile at the URL will be
                           used for the component.
-                        type: string
-                      secret:
-                        description: Secret containing a Person Access Token to clone
-                          a sample, if using private repository
                         type: string
                       url:
                         description: If importing from git, the repository to create
