[DEVHAS-85] Add Dockerfile Support for CDQ (#89)
* Rough Draft of CDQ for Dockerfiles detection 1

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

* Rough Draft of CDQ for Dockerfiles detection 2

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

* Add dockerfile support for one level component

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

* Add and udpate tests

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

* rebasing with main

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/config/crd/bases/appstudio.redhat.com_componentdetectionqueries.yaml
+++ b/config/crd/bases/appstudio.redhat.com_componentdetectionqueries.yaml
@@ -48,6 +48,10 @@ spec:
                     description: If specified, the devfile at the URL will be used
                       for the component.
                     type: string
+                  dockerfileUrl:
+                    description: If specified, the dockerfile at the URL will be used
+                      for the component.
+                    type: string
                   url:
                     description: If importing from git, the repository to create the
                       component from
@@ -269,6 +273,10 @@ spec:
                                 devfileUrl:
                                   description: If specified, the devfile at the URL
                                     will be used for the component.
+                                  type: string
+                                dockerfileUrl:
+                                  description: If specified, the dockerfile at the
+                                    URL will be used for the component.
                                   type: string
                                 url:
                                   description: If importing from git, the repository
