--- a/config/crd/bases/appstudio.redhat.com_components.yaml
+++ b/config/crd/bases/appstudio.redhat.com_components.yaml
@@ -217,6 +217,10 @@ spec:
                         description: If specified, the devfile at the URL will be
                           used for the component.
                         type: string
+                      dockerfileUrl:
+                        description: If specified, the dockerfile at the URL will
+                          be used for the component.
+                        type: string
                       url:
                         description: If importing from git, the repository to create
                           the component from
