--- a/bundle/manifests/application-service.clusterserviceversion.yaml
+++ b/bundle/manifests/application-service.clusterserviceversion.yaml
@@ -155,6 +155,14 @@ spec:
           - patch
           - update
         - apiGroups:
+          - ""
+          resources:
+          - configmaps
+          verbs:
+          - get
+          - list
+          - watch
+        - apiGroups:
           - tekton.dev
           resources:
           - pipelineruns
