--- a/config/samples/component/component-basic.yaml
+++ b/config/samples/component/component-basic.yaml
@@ -5,25 +5,26 @@ metadata:
 spec:
   componentName: backend
   application: application-sample
+  context: devfile-sample-python-basic
   replicas: 1
   targetPort: 1111
   route: route111
-  resources:
-    limits:
-      memory: "500Mi"
-      cpu: "2"
-      storage: "400Mi"
-      ephemeral-storage: "500Mi"
-    requests:
-      memory: "400Mi"
-      cpu: "700m"
-      storage: "200Mi"
-      ephemeral-storage: "400Mi"
-  env:
-  - name: FOO
-    value: "foo1"
-  - name: BAR
-    value: "bar1"
+  # resources:
+  #   limits:
+  #     memory: "500Mi"
+  #     cpu: "2"
+  #     storage: "400Mi"
+  #     ephemeral-storage: "500Mi"
+  #   requests:
+  #     memory: "400Mi"
+  #     cpu: "700m"
+  #     storage: "200Mi"
+  #     ephemeral-storage: "400Mi"
+  # env:
+  # - name: FOO
+  #   value: "foo1"
+  # - name: BAR
+  #   value: "bar1"
   source:
     git:
-      url: https://github.com/devfile-samples/devfile-sample-java-springboot-basic
+      url: https://github.com/maysunfaisal/multi-components-dockerfile
