Rough draft of Environment App Binding - 1
Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/bundle/manifests/application-service.clusterserviceversion.yaml
+++ b/bundle/manifests/application-service.clusterserviceversion.yaml
@@ -105,6 +105,32 @@ spec:
         - apiGroups:
           - appstudio.redhat.com
           resources:
+          - applicationsnapshotenvironmentbindings
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - appstudio.redhat.com
+          resources:
+          - applicationsnapshotenvironmentbindings/finalizers
+          verbs:
+          - update
+        - apiGroups:
+          - appstudio.redhat.com
+          resources:
+          - applicationsnapshotenvironmentbindings/status
+          verbs:
+          - get
+          - patch
+          - update
+        - apiGroups:
+          - appstudio.redhat.com
+          resources:
           - componentdetectionqueries
           verbs:
           - create
@@ -158,6 +184,14 @@ spec:
           - ""
           resources:
           - configmaps
+          verbs:
+          - get
+          - list
+          - watch
+        - apiGroups:
+          - ""
+          resources:
+          - secrets
           verbs:
           - get
           - list
