--- a/config/kcp/kustomization.yaml
+++ b/config/kcp/kustomization.yaml
@@ -18,11 +18,9 @@ bases:
 - ../rbac
 
 resources:
-  - apiexport.yaml
-  - application.apiresourceschema.yaml
-  - cdq.apiresourceschema.yaml
-  - component.apiresourceschema.yaml
-  
+- apiexport_has.yaml
+- apiresourceschema_has.yaml
+
 patches:
 # Disable webhooks by default on KCP
 # Webhooks can be optionally enabled after deploy
