--- a/bundle/manifests/application-service.clusterserviceversion.yaml
+++ b/bundle/manifests/application-service.clusterserviceversion.yaml
@@ -197,6 +197,16 @@ spec:
           - list
           - watch
         - apiGroups:
+          - appstudio.redhat.com
+          resources:
+          - applicationsnapshots
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - watch
+        - apiGroups:
           - tekton.dev
           resources:
           - pipelineruns
@@ -346,8 +356,8 @@ spec:
                   periodSeconds: 10
                 resources:
                   limits:
-                    cpu: 200m
-                    memory: 100Mi
+                    cpu: 500m
+                    memory: 400Mi
                   requests:
                     cpu: 100m
                     memory: 20Mi
