Add APIExport and APIResourceSchemas for HAS (#130)
* Add APIExport and APIResourceSchemas for HAS

Signed-off-by: John Collier <jcollier@redhat.com>

* Rebase around generate-kcp-api.sh

Signed-off-by: John Collier <jcollier@redhat.com>

* Add kcp tooling to build

Signed-off-by: John Collier <jcollier@redhat.com>

* Use latest kcp

Signed-off-by: John Collier <jcollier@redhat.com>

* Update Makefile

Co-authored-by: Maysun Faisal <31771087+maysunfaisal@users.noreply.github.com>

Co-authored-by: Maysun Faisal <31771087+maysunfaisal@users.noreply.github.com>

--- a/config/kcp/kustomization.yaml
+++ b/config/kcp/kustomization.yaml
@@ -17,6 +17,10 @@ bases:
 - ../manager
 - ../rbac
 
+resources:
+- apiexport_has.yaml
+- apiresourceschema_has.yaml
+
 patches:
 # Disable webhooks by default on KCP
 # Webhooks can be optionally enabled after deploy
