--- a/config/crd/bases/appstudio.redhat.com_componentdetectionqueries.yaml
+++ b/config/crd/bases/appstudio.redhat.com_componentdetectionqueries.yaml
@@ -264,6 +264,10 @@ spec:
                             component) or 2. An Image Pull Secret to access the Component''s
                             container image (if using an Image-source component).'
                           type: string
+                        skipGitOpsResourceGeneration:
+                          description: Whether or not to bypass the generation of
+                            GitOps resources for the Component. Defaults to false.
+                          type: boolean
                         source:
                           description: Source describes the Component source
                           properties:
