--- a/config/crd/bases/appstudio.redhat.com_components.yaml
+++ b/config/crd/bases/appstudio.redhat.com_components.yaml
@@ -204,6 +204,10 @@ spec:
                   Secret to access the Component''s container image (if using an Image-source
                   component).'
                 type: string
+              skipGitOpsResourceGeneration:
+                description: Whether or not to bypass the generation of GitOps resources
+                  for the Component. Defaults to false.
+                type: boolean
               source:
                 description: Source describes the Component source
                 properties:
