Address review comments
Signed-off-by: John Collier <jcollier@redhat.com>

--- a/config/crd/bases/appstudio.redhat.com_components.yaml
+++ b/config/crd/bases/appstudio.redhat.com_components.yaml
@@ -340,6 +340,8 @@ spec:
                       component
                     type: string
                   resourceGenerationSkipped:
+                    description: ResourceGenerationSkipped is whether or not GitOps
+                      resource generation was skipped for the component
                     type: boolean
                 type: object
               webhook:
