First draft of Environment CR Watch()
Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/bundle/manifests/application-service.clusterserviceversion.yaml
+++ b/bundle/manifests/application-service.clusterserviceversion.yaml
@@ -255,6 +255,14 @@ spec:
         - apiGroups:
           - appstudio.redhat.com
           resources:
+          - environments
+          verbs:
+          - get
+          - list
+          - watch
+        - apiGroups:
+          - appstudio.redhat.com
+          resources:
           - spiaccesstokenbindings
           - spiaccesstokens
           verbs:
