[DEVHAS-100] Add watch support for Environment CR with the Binding controller (#152)
* First draft of Environment CR Watch()

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

* Rebase & Update with main

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

* Address review comments

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/bundle/manifests/application-service.clusterserviceversion.yaml
+++ b/bundle/manifests/application-service.clusterserviceversion.yaml
@@ -131,6 +131,14 @@ spec:
         - apiGroups:
           - appstudio.redhat.com
           resources:
+          - applicationsnapshots
+          verbs:
+          - get
+          - list
+          - watch
+        - apiGroups:
+          - appstudio.redhat.com
+          resources:
           - componentdetectionqueries
           verbs:
           - create
@@ -181,6 +189,14 @@ spec:
           - patch
           - update
         - apiGroups:
+          - appstudio.redhat.com
+          resources:
+          - environments
+          verbs:
+          - get
+          - list
+          - watch
+        - apiGroups:
           - ""
           resources:
           - configmaps
@@ -192,14 +208,6 @@ spec:
           - ""
           resources:
           - secrets
-          verbs:
-          - get
-          - list
-          - watch
-        - apiGroups:
-          - appstudio.redhat.com
-          resources:
-          - applicationsnapshots
           verbs:
           - get
           - list
