--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -19,5 +19,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: maysunfaisal/hasoperator
-  newTag: "100"
+  newName: quay.io/redhat-appstudio/application-service
+  newTag: next
