[DEVHAS-151] Add PermissionClaims for HAS ApiExports
Signed-off-by: John Collier <jcollier@redhat.com>

--- a/config/kcp/apiexport_has.yaml
+++ b/config/kcp/apiexport_has.yaml
@@ -4,8 +4,18 @@
 apiVersion: apis.kcp.dev/v1alpha1
 kind: APIExport
 metadata:
-  name: has
+  name: apiexport-identity-has
 spec:
+  permissionClaims:
+  - group: ""
+    resource: "secrets"
+    verbs: ["get", "list", "watch"]
+  - group: ""
+    resource: "configmaps"
+    verbs: ["get", "list", "watch"]
+  - group: "route.openshift.io"
+    resource: "routes"
+    verbs: ["get", "list", "watch"]
   latestResourceSchemas:
     - v202207121506.applications.appstudio.redhat.com
     - v202207121506.componentdetectionqueries.appstudio.redhat.com
