--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -78,8 +78,8 @@ jobs:
           fi
       - name: Check format
         run: |
-          go get -u github.com/google/addlicense
-          go get -u golang.org/x/tools/cmd/goimports
+          go install github.com/google/addlicense@lateset
+          go install golang.org/x/tools/cmd/goimports@latest
           git reset HEAD --hard
           make check_fmt
           if [[ $? != 0 ]]
