Update Makefile targets to deploy HAS on KCP
Signed-off-by: John Collier <jcollier@redhat.com>

--- a/config/kcp-rbac/role.yaml
+++ b/config/kcp-rbac/role.yaml
@@ -92,3 +92,17 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - apis.kcp.dev
+  resources:
+  - apiexports
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - apis.kcp.dev
+  resources:
+  - apiexports/content
+  verbs:
+  - '*'
